# vtek

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: dev.yaml
cmake/: Findglslang.cmake
examples/: 01_triangle.cpp  02_triangle_move.cpp  03_vertex_buffer.cpp  04_dynamic_circle.cpp  05_camera.cpp  06_model.cpp  07_textured_model.cpp  08_framebuffer.cpp  08_simple_raytracing.cpp  triangle_plain.cpp
include/vtek/: .#vtek_buffer.hpp  api.hpp  version.hpp  vtek.h  vtek.hpp  vtek_allocator.hpp  vtek_application_window.h  vtek_application_window.hpp  vtek_buffer.hpp  vtek_camera.hpp  vtek_colors.hpp  vtek_command_buffer.h  vtek_command_buffer.hpp  vtek_command_pool.h  vtek_command_pool.hpp  vtek_command_scheduler.hpp  vtek_commands.hpp  vtek_descriptor_pool.hpp  vtek_descriptor_set.hpp  vtek_descriptor_set_layout.hpp  vtek_descriptor_type.hpp  vtek_device.h  vtek_device.hpp  vtek_fileio.hpp  vtek_format_support.hpp  vtek_frame_sync.hpp  vtek_framebuffer.h  vtek_framebuffer.hpp  vtek_glfw_window.h  vtek_glm_includes.hpp  vtek_graphics_pipeline.h  vtek_graphics_pipeline.hpp  vtek_host_allocator.h  vtek_image.hpp  vtek_input.h  vtek_input.hpp  vtek_instance.h  vtek_instance.hpp  vtek_logging.h  vtek_logging.hpp  (+29 more)
models/armored_car/: armored_car.fbx  armored_car.glb  armored_car.mtl  readme.txt
pchs/: pch_test_include.h  vtek_vulkan.pch
shaders/: build_shaders.py
shaders/05_simple_camera/: vertex.glsl
shaders/06_simple_model/: fragment.glsl  vertex.glsl
shaders/07_textured_model/: fragment.glsl  vertex.glsl
shaders/08_framebuffer/main/: fragment.glsl  vertex.glsl
shaders/08_framebuffer/quad/: fragment.glsl  vertex.glsl
shaders/dynamic_circle/: fragment.glsl  vertex.glsl
shaders/simple_camera/: fragment.glsl  vertex.glsl
shaders/simple_triangle/: color_constants.glsl  fragment.glsl  get_frag_color.glsl  vertex.glsl
shaders/simple_triangle_move/: fragment.glsl  vertex.glsl
shaders/simple_vertex/: fragment.glsl  vertex.glsl
shaders/simple_vertex_plain_color/: fragment.glsl  vertex.glsl
shaders/utils/: functions.glsl  lighting.glsl
src/: vtek_allocator.cpp  vtek_application_window.cpp  vtek_buffer.cpp  vtek_camera.cpp  vtek_command_buffer.cpp  vtek_command_pool.cpp  vtek_command_scheduler.cpp  vtek_commands.cpp  vtek_descriptor_pool.cpp  vtek_descriptor_set.cpp  vtek_descriptor_set_layout.cpp  vtek_descriptor_type.cpp  vtek_device.cpp  vtek_fileio.cpp  vtek_format_support.cpp  vtek_frame_sync.cpp  vtek_framebuffer.cpp  vtek_glfw_window.cpp  vtek_glfw_window.h  vtek_graphics_pipeline.cpp  vtek_host_allocator.cpp  vtek_image.cpp  vtek_instance.cpp  vtek_logging.cpp  vtek_main.cpp  vtek_models.cpp  vtek_physical_device.cpp  vtek_queue.cpp  vtek_render_pass.cpp  vtek_sampler.cpp  vtek_shaders.cpp  vtek_swapchain.cpp  vtek_uniform_data.cpp  vtek_vertex_data.cpp  vtek_vulkan_helpers.cpp  vtek_vulkan_types.cpp
src/glsl/: vtek_glsl_shader_utils.cpp  vtek_glsl_shader_utils.hpp
src/imgload/: vtek_image_load.cpp  vtek_image_load.hpp
src/imgutils/: vtek_image_formats.cpp  vtek_image_formats.hpp  vtek_image_load.cpp  vtek_image_load.hpp
src/impl/: vtek_allocator_struct.hpp  vtek_command_buffer_struct.hpp  vtek_descriptor_set_struct.hpp  vtek_glfw_backend.h  vtek_host_allocator.h  vtek_host_allocator.hpp  vtek_init.hpp  vtek_queue_struct.hpp  vtek_vma_helpers.hpp  vtek_vulkan_helpers.h  vtek_vulkan_helpers.hpp
src/scheduling/: vtek_command_scheduler.cpp  vtek_command_scheduler.hpp
tests/: test_camera.cpp  test_formats.cpp  test_shaders.cpp  test_ut.cpp
tools/scripts/linux/: lines_of_code.sh  print_todos.sh
